<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/noel1"
    tools:layout_editor_absoluteY="81dp">

    <ImageButton
        android:id="@+id/appler"
        android:layout_width="45dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/bombe"
        app:layout_constraintStart_toEndOf="@+id/app"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    />

    <ImageButton
        android:id="@+id/app"
        android:layout_width="45dp"
        android:layout_height="56dp"
        android:background="@drawable/solution"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textv"
        android:layout_width="46dp"
        android:layout_height="56dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="6mm"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toStartOf="@+id/etoiles"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/etoiles"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:background="@android:drawable/btn_star_big_on"
        android:src="@android:drawable/btn_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/img1"
        android:layout_width="135dp"
        android:layout_height="135sp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/quatre"
        app:layout_constraintBottom_toTopOf="@+id/img3"
        app:layout_constraintEnd_toStartOf="@+id/img2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    />

    <ImageButton
        android:id="@+id/img2"
        android:layout_width="135dp"
        android:layout_height="135sp"
        android:layout_marginBottom="31dp"
        android:src="@drawable/point"
        app:layout_constraintBottom_toTopOf="@+id/img4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img1"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/img3"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/point"
        app:layout_constraintBottom_toTopOf="@+id/ite1"
        app:layout_constraintEnd_toStartOf="@+id/img4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/img4"

        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/point"
        app:layout_constraintBottom_toTopOf="@+id/ite4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ite1"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="62dp"
        android:background="#45ff"
        android:gravity="center"
        android:hint="1"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot1"
        app:layout_constraintEnd_toStartOf="@+id/ite2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/ite2"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="62dp"
        android:background="#45ff"
        android:gravity="center"
        android:hint="2"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot2"
        app:layout_constraintEnd_toStartOf="@+id/ite3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ite1"
        tools:ignore="MissingConstraints" />

    <TextView

        android:id="@+id/ite3"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="62dp"
        android:background="#45ff"
        android:gravity="center"
        android:hint="3"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot3"
        app:layout_constraintEnd_toStartOf="@+id/ite4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ite2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ite4"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="62dp"
        android:background="#45ff"
        android:gravity="center"
        android:hint="4"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot4"
        app:layout_constraintEnd_toStartOf="@+id/ite5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ite3"
        tools:ignore="MissingConstraints" />

    <TextView

        android:id="@+id/ite5"
        android:layout_width="45dp"
        android:layout_height="50dp"


        android:layout_marginBottom="62dp"
        android:background="#45ff"
        android:gravity="center"
        android:hint="5"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ite4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot7"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ss"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bot8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot8"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/bb"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bot9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot7"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot9"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/oo"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bot10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot10"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/oo"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bot11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot11"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ee"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bot12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot10"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot12"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/aa"
        android:textColor="@android:color/background_light"
        android:textSize="18dp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot11"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot1"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/rr"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot7"
        app:layout_constraintEnd_toStartOf="@+id/bot2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot2"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ff"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot8"
        app:layout_constraintEnd_toStartOf="@+id/bot3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot3"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ss"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot9"
        app:layout_constraintEnd_toStartOf="@+id/bot4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot4"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ee"
        android:textColor="@android:color/background_light"

        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot10"
        app:layout_constraintEnd_toStartOf="@+id/bot5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot5"
        android:layout_width="44dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/bb"
        android:textColor="@android:color/background_light"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot11"
        app:layout_constraintEnd_toStartOf="@+id/bot6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bot6"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buton_image"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/zz"
        android:textColor="@android:color/background_light"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bot12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bot5"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>